detallitos al footer

--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -47,7 +47,7 @@
         </figure>
         <div class="service-description">
             <div class="service-description-container">
-                <h3 class="text-right">Desarrollo Web</h3>
+                <h3>Desarrollo Web</h3>
                 <p class="paragraph">
                     La tecnología está a tu alcance y hacerla a un lado no es una opción. Porque el crecimiento de tu negocio se basa en la rapidez de gestión, creemos que la optimización y automatización de procesos mediante nuestros softwares son la solución práctica para potenciarte en el mercado. Estas soluciones son: sistemas de inventario, de contabilidad, páginas web, aplicaciones móviles, y plataformas de comercio electrónico.
                 </p>
@@ -79,7 +79,7 @@
         </figure>
         <div class="service-description">
             <div class="service-description-container">
-                <h3 class="text-right">Arquitectura</h3>
+                <h3>Arquitectura</h3>
                 <p class="paragraph">
                     Conocemos la importancia de satisfacer las necesidades de infraestructura, para el desarrollo laboral, personal y familiar en la sociedad, a través de servicios integrales de arquitectura, generando espacios inteligentes, confortables y visualmente agradables, fieles a las preferencias y necesidades del cliente.
                 </p>
