--- a/public/res/css/styles.css
+++ b/public/res/css/styles.css
@@ -481,12 +481,9 @@ a:hover {
 .header .header-container {
   justify-content: space-between; }
 
-.menu-wrapper, .service-description, .services-container, .element-info, .logo-icon, .footer-nav, .social, .social-icon {
+.menu-wrapper, .service-description, .services-container, .element-info, .footer-container, .logo-icon, .footer-nav, .social, .social-icon {
   justify-content: center;
   align-items: center; }
-
-.footer-content {
-  width: 100%; }
 
 /***************************************\
                 Grid
@@ -539,14 +536,14 @@ main {
 .services {
   flex-flow: row wrap; }
 
-.menu-wrapper, .service-description, .services-container, .element-info, .logo-icon, .footer-nav, .social, .social-icon {
+.menu-wrapper, .service-description, .services-container, .element-info, .footer-container, .logo-icon, .footer-nav, .social, .social-icon {
   justify-content: center;
   align-items: center; }
 
 .header {
   justify-content: center; }
 
-.navbar, .footer-container {
+.navbar {
   align-items: center; }
 
 .header .header-container {
@@ -1232,6 +1229,7 @@ a.is-checked, a.is-checked:hover {
   background-color: rgba(50, 50, 50, 0.9); }
 
 .footer-content {
+  width: 80%;
   flex-direction: row;
   flex-wrap: wrap; }
   .footer-content div {
@@ -1282,6 +1280,24 @@ a.is-checked, a.is-checked:hover {
   text-align: center; }
   .social-icon .fa {
     color: #fff; }
+
+.social-icon:nth-child(1) {
+  background-color: #3B5998; }
+
+.social-icon:nth-child(2) {
+  background-color: #1DA1F2; }
+
+.social-icon:nth-child(3) {
+  background-image: linear-gradient(to right, #b8cbb8 0%, #b8cbb8 0%, #b465da 0%, #cf6cc9 33%, #ee609c 66%, #ee609c 100%); }
+
+.social-icon:nth-child(4) {
+  background-color: #0177B5; }
+
+.social-icon:nth-child(5) {
+  background-color: #005CFF; }
+
+.social-icon:nth-child(6) {
+  background-color: #24292E; }
 
 @media screen and (max-width: 420px) {
   .map-container {
