--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -34,7 +34,7 @@
         <figure class="wedo-fig ribon-left">
             <img class="wedo-fig_img" src="res/img/services-home/diseno2.png" alt="Design">
             <figcaption class="wedo-fig_cap">
-                <a href="" ui-sref="service({service: 'design'})"  data-ng-click="$parent.serviceTitle = 'DISEÑO' "></a>
+                <a href="" ui-sref="service({service: 'design'})"></a>
             </figcaption>
         </figure>
     </div>
@@ -42,7 +42,7 @@
         <figure class="wedo-fig ribon-right">
             <img class="wedo-fig_img" src="res/img/services-home/desarrollo.png" alt="Development">
             <figcaption class="wedo-fig_cap">
-                <a href="" ui-sref="service({service: 'development'})"  data-ng-click="$parent.serviceTitle = 'DESARROLLO' "></a>
+                <a href="" ui-sref="service({service: 'development'})"></a>
             </figcaption>
         </figure>
         <div class="service-description">
@@ -66,7 +66,7 @@
         <figure class="wedo-fig ribon-left">
             <img class="wedo-fig_img" src="res/img/services-home/marketing1.png" alt="Marketing">
             <figcaption class="wedo-fig_cap">
-                <a href="" ui-sref="service({service: 'marketing'})" data-ng-click="$parent.serviceTitle = 'MARKETING' "></a>
+                <a href="" ui-sref="service({service: 'marketing'})"></a>
             </figcaption>
         </figure>        
     </div>
@@ -74,7 +74,7 @@
         <figure class="wedo-fig ribon-right">
             <img class="wedo-fig_img" src="res/img/services-home/arquitect2.png" alt="Architecture">
             <figcaption class="wedo-fig_cap">
-                <a href="" ui-sref="service({service: 'architecture'})" data-ng-click="$parent.serviceTitle = 'ARQUITECTURA' "></a>
+                <a href="" ui-sref="service({service: 'architecture'})"></a>
             </figcaption>s
         </figure>
         <div class="service-description">
