--- a/src/scss/framework/_typography.scss
+++ b/src/scss/framework/_typography.scss
@@ -11,7 +11,10 @@
 	font-family: 'arialn';
 	src: url('../fonts/Arial Rounded.ttf') format('truetype');
 }
-
+@font-face {
+	font-family: 'montserrat';
+	src: url('../fonts/Montserrat-Regular.ttf') format('truetype');
+}
 .text-center {
     text-align: center;
 }
