--- a/public/partials/service.html
+++ b/public/partials/service.html
@@ -1,5 +1,5 @@
 
-<div id="parallax-banner" class="service-banner">
+<div id="parallax-banner" class="service-banner" style="background-image: url('{{ $ctrl.service[0].bgi }}')">
 	<h2 class="service-title">{{ $parent.serviceTitle }}</h2>
 </div>
 <div class="services">
