--- a/src/scss/layouts/_service.scss
+++ b/src/scss/layouts/_service.scss
@@ -2,7 +2,7 @@
     height: 350px;
     //margin-top: -91px;
     background: {
-        image: url('../img/banner-design.png');
+        //image: url('../img/banner-design.png');
         attachment: fixed;
         repeat: no-repeat;
         //size: 100%;
