--- a/src/scss/layouts/_portfolio.scss
+++ b/src/scss/layouts/_portfolio.scss
@@ -1,6 +1,10 @@
 .portfolio {
 	padding-top: 3rem;
 	padding-bottom: 7rem;
+	h2 {
+		font-size: 2em;
+		margin: 1.8rem 0;
+	}
 }
 
 a.isotope {
@@ -22,6 +26,7 @@ a.is-checked, a.is-checked:hover{
 
 .grid {
     width: 100%;
+    margin-top: 1.3rem;
 }
 
 .element-item {
