--- a/public/res/css/styles.css
+++ b/public/res/css/styles.css
@@ -432,10 +432,10 @@ $bg-color-dark:;
 \***************************************/
 @font-face {
   font-family: 'arialr';
-  src: url("../fonts/Arial Rounded Bold.ttf") format("truetype"); }
+  src: url("../fonts/Arial-Rounded-Bold.ttf") format("truetype"); }
 @font-face {
   font-family: 'arialn';
-  src: url("../fonts/Arial Rounded.ttf") format("truetype"); }
+  src: url("../fonts/Arial-Rounded.ttf") format("truetype"); }
 @font-face {
   font-family: 'montserrat';
   src: url("../fonts/Montserrat-Regular.ttf") format("truetype"); }
