--- a/src/scss/framework/_typography.scss
+++ b/src/scss/framework/_typography.scss
@@ -5,11 +5,11 @@
 
 @font-face {
 	font-family: 'arialr';
-	src: url('../fonts/Arial Rounded Bold.ttf') format('truetype');
+	src: url('../fonts/Arial-Rounded-Bold.ttf') format('truetype');
 }
 @font-face {
 	font-family: 'arialn';
-	src: url('../fonts/Arial Rounded.ttf') format('truetype');
+	src: url('../fonts/Arial-Rounded.ttf') format('truetype');
 }
 @font-face {
 	font-family: 'montserrat';
