lazy load home test

--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -32,7 +32,7 @@
             </div>
         </div>
         <figure class="wedo-fig ribon-left">
-            <img class="wedo-fig_img" src="res/img/services-home/diseno2.png" alt="Design">
+            <img class="lazy wedo-fig_img" data-original="res/img/services-home/diseno2.png" alt="Design">
             <figcaption class="wedo-fig_cap">
                 <a href="" ui-sref="service({service: 'design'})"></a>
             </figcaption>
@@ -40,7 +40,7 @@
     </div>
     <div class="wedo-wrapper">
         <figure class="wedo-fig ribon-right">
-            <img class="wedo-fig_img" src="res/img/services-home/desarrollo.png" alt="Development">
+            <img class="lazy wedo-fig_img" data-original="res/img/services-home/desarrollo.png" alt="Development">
             <figcaption class="wedo-fig_cap">
                 <a href="" ui-sref="service({service: 'development'})"></a>
             </figcaption>
@@ -64,7 +64,7 @@
             </div>
         </div>
         <figure class="wedo-fig ribon-left">
-            <img class="wedo-fig_img" src="res/img/services-home/marketing1.png" alt="Marketing">
+            <img class="lazy wedo-fig_img" data-original="res/img/services-home/marketing1.png" alt="Marketing">
             <figcaption class="wedo-fig_cap">
                 <a href="" ui-sref="service({service: 'marketing'})"></a>
             </figcaption>
@@ -87,7 +87,6 @@
         </div>
     </div>
 </div>
-<script src="res/js/lazyload.js"></script>
 
     <script>
         $("img.lazy").lazyload();
