--- a/src/scss/layouts/_portfolio.scss
+++ b/src/scss/layouts/_portfolio.scss
@@ -71,6 +71,10 @@ a.is-checked, a.is-checked:hover{
 	color: $white;
 }
 
+img.portImg, div.bx-wrapper {
+	width: 100%;
+}
+
 @media screen and (max-width: 420px) {
 	.element-item {
 		width: 100%;
