--- a/public/res/css/styles.css
+++ b/public/res/css/styles.css
@@ -558,7 +558,7 @@ main {
 .header .header-container {
   justify-content: space-between; }
 
-.element-info, .footer {
+.footer {
   flex-flow: column; }
 
 .flex {
@@ -1127,16 +1127,16 @@ a.is-checked, a.is-checked:hover {
   background-color: rgba(0, 0, 0, 0.5);
   opacity: 0;
   transition: 1s ease all; }
-  .element-info a {
+  .element-info p {
     color: white; }
 
 .element-item:hover .element-info {
   opacity: 1; }
 
-.element-info h4 {
-  margin: 0;
-  color: #fff; }
-
+/*.element-info h4 {
+	margin: 0;
+	color: $white;
+}*/
 img.portImg, div.bx-wrapper {
   width: 100%; }
 
@@ -1227,7 +1227,7 @@ img.portImg, div.bx-wrapper {
   top: 0;
   right: 0;
   background-color: #FF5252;
-  padding: 7px;
+  padding: 1em;
   z-index: 1; }
 
 .map-container {
@@ -1266,7 +1266,9 @@ img.portImg, div.bx-wrapper {
     flex-flow: row; }
     .contact-info span p {
       -webkit-margin-before: 0;
-      -webkit-margin-after: 0; }
+      -webkit-margin-after: 0;
+      margin-block-start: 0;
+      margin-block-end: 0; }
   .contact-info .fa {
     margin: 0 15px;
     width: 24px;
@@ -1366,12 +1368,10 @@ img.portImg, div.bx-wrapper {
   background-image: url("../img/work.jpg"); }
 
 .modal-close {
-  /*position: relative;
-  top: 0;
-  right: 0;*/
-  /*width: 50px;
-  height: 50px;*/
-  background-color: #FF5252; }
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 2em; }
 
 @media screen and (max-width: 420px) {
   .moda-contento {
