--- a/src/scss/layouts/_footer.scss
+++ b/src/scss/layouts/_footer.scss
@@ -12,7 +12,7 @@
 	top: 0;
 	right: 0;
 	background-color: $accent-color;
-	padding: 7px;
+	padding: 1em;
 	z-index: 1;
 }
 .map-container {
@@ -80,6 +80,8 @@
 		p {
 			-webkit-margin-before: 0;
     		-webkit-margin-after: 0;
+    		margin-block-start: 0;
+    		margin-block-end: 0;
 		}
 
 	}
