--- a/src/scss/layouts/_modal-project.scss
+++ b/src/scss/layouts/_modal-project.scss
@@ -9,7 +9,6 @@
 	background-color: #fafafa;
 	/*opacity: .5;*/
 }
-
 .modal-flex-wrapper {
 	@extend %display-flex;
     width: 100%;
@@ -35,12 +34,10 @@
 }
 
 .modal-close {
-	/*position: relative;
-	top: 0;
-	right: 0;*/
-	/*width: 50px;
-	height: 50px;*/
-	background-color: $accent-color;
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	font-size: 2em;
 }
 
 @media screen and (max-width: 420px) {
