portfolio agregando trabajos

--- a/src/scss/layouts/_portfolio.scss
+++ b/src/scss/layouts/_portfolio.scss
@@ -31,7 +31,7 @@ a.is-checked, a.is-checked:hover{
 
 .element-item {
 	width: 24%;
-	//height: 220px;
+	cursor: pointer;
 	margin: 1px;
 	padding: 0;	
 }
