--- a/public/partials/portfolio.html
+++ b/public/partials/portfolio.html
@@ -1,10 +1,3 @@
-<script>
-	
-	$(document).ready(function(){
-	  $('.bxslider').bxSlider();
-	});
-</script>
-
 <div class="row">
     <div class="portfolio row-content row-content_medium row-content_column row-content-center_vertical">
         <h2 class="text-center"> PORTAFOLIO DE TRABAJOS </h2>
@@ -14,7 +7,7 @@
           <a herf="" class="isotope" data-filter=".web">Web</a>
           <a herf="" class="isotope" data-filter=".system">Sistemas</a>
           <a herf="" class="isotope" data-filter=".design">Diseño</a>
-          <a herf="" class="isotope" data-filter=".mobile">Branding</a>
+          <a herf="" class="isotope" data-filter=".branding">Branding</a>
         </div>
         <br>
         <div class="grid">
@@ -24,22 +17,22 @@
 			  	<h4><a data-ui-sref="work">Work title</a></h4>
 			  </figcaption>
 			</figure>-->
-			<figure class="element-item design">
+			<figure class="element-item branding">
 			  <img src="res/img/portfolio/diseno/logos/familiasunidas/logo.jpg" alt="img-porfolio">
 			  <a data-ui-sref="work({work: 'fu'})" class="element-info">
-			  	<p>FAMILIAS UNIDAS</p>
+			  	<p>Familias Unidas</p>
 			  </a>
 			</figure>
-			<figure class="modal-project element-item mobile">
-			  <img src="res/img/portfolio/diseno/logos/familiasunidas/logo.jpg" alt="img-porfolio">
-			  <figcaption class="element-info">
-			  	<a data-ui-sref="work({work: 'fu'})">FAMILIAS UNIDAS</a>
+			<figure class="modal-project element-item design">
+			  <img src="res/img/portfolio/diseno/logos/gasmarket/gasmarket.png" alt="img-porfolio">
+			  <figcaption class="element-info" data-ui-sref="portfolio.modalwork({modalwork: 'gasmarket'})">
+			  	<p>Gasmarket</p>
 			  </figcaption>
 			</figure>
-			<figure class="element-item web">
-			  <img src="res/img/portfolio/diseno/logos/familiasunidas/logo.jpg" alt="img-porfolio">
-			  <figcaption class="element-info">
-			  	<a data-ui-sref="work({work: 'fu'})">FAMILIAS UNIDAS</a>
+			<figure class="modal-project element-item design">
+			  <img src="res/img/portfolio/diseno/logos/biketown/biketown.jpg" alt="img-porfolio">
+			  <figcaption class="element-info" data-ui-sref="portfolio.modalwork({modalwork: 'biketown'})">
+			  	<p>Biketown</p>
 			  </figcaption>
 			</figure>
 	    </div>
@@ -47,36 +40,8 @@
 </div>
 	
 <div id="modal-container" class="modal-container">
-
-    <div class="modal-flex-wrapper flex-center">
-		
-        <i class="fa fa-close fa-2 modal-close" aria-hidden="true"></i>
-		<div class="moda-contento"> 
-			<ul class="bxslider">
-				<li data-ng-repeat="portImg in $ctrl.portImgs"><img class="portImg" src="{{ portImg }}" alt="familias unidas"></li>
-			</ul>
-		<!-- ui-view="work"
-			
-			<portfolio-work></portfolio-work>
-			<div class="work-img"></div>
-			
-			<div class="modal-close"> X </div>
-			
-			<div class="work-detail">
-				<div class="work-detail-container">
-					<h3>TITLE</h3>
-					<div>
-						<a href="">UI/UX</a>
-						<a href="">SEO/SEM</a>
-						<a href="">Responsive</a>
-						<a href="">Mobile</a>
-					</div>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo quaerat distinctio ipsam, itaque laboriosam iure voluptate minus neque ea, quia officia nobis harum, voluptas ut qui quisquam, vitae esse sequi.</p>
-				</div>
-			</div> -->
-
-		</div>
-    </div>
+	<i class="fa fa-close fa-2 modal-close" aria-hidden="true" data-ng-click="$ctrl.back()"></i><!--onclick="history.back();"-->
+	<ui-view></ui-view>    
 </div>
 
 <script src="res/js/isotope.js"></script>	
