--- a/public/partials/portfolio.html
+++ b/public/partials/portfolio.html
@@ -40,7 +40,7 @@
 </div>
 	
 <div id="modal-container" class="modal-container">
-	<i class="fa fa-close fa-2 modal-close" aria-hidden="true" data-ng-click="$ctrl.back()"></i><!--onclick="history.back();"-->
+	<i class="fa fa-2x fa-close modal-close" aria-hidden="true" data-ng-click="$ctrl.back()"></i><!--onclick="history.back();"-->
 	<ui-view></ui-view>    
 </div>
 
