--- a/src/scss/layouts/_modal-project.scss
+++ b/src/scss/layouts/_modal-project.scss
@@ -15,8 +15,8 @@
     height: 100%;
 }
 .moda-contento {
-	width: 75%;
-	height: 90%;
+	width: 60%;
+	height: 80%;
 	overflow: hidden;
 	@extend %flex; 
 	//margin: 0 auto;
@@ -35,9 +35,10 @@
 
 .modal-close {
 	position: absolute;
-	top: 10px;
-	right: 10px;
-	font-size: 2em;
+	top: 20px;
+	right: 25px;
+	cursor: pointer;
+	//font-size: 2em;
 }
 
 @media screen and (max-width: 420px) {
@@ -56,10 +57,10 @@
 		width: 90%;
 		margin: 0 auto;
 	}
-	.modal-close {
+	/*.modal-close {
 		height: 70px;
 		width: 70px;
 		border-radius: 50% 
 		//margin: -50% auto;
-	}
+	}*/
 }
