--- a/public/partials/portfolio.html
+++ b/public/partials/portfolio.html
@@ -18,7 +18,7 @@
 			  </figcaption>
 			</figure>-->
 			<figure class="element-item branding">
-			  <img src="res/img/portfolio/diseno/logos/familiasunidas/logo.jpg" alt="img-porfolio">
+			  <img src="res/img/portfolio/diseno/logos/familiasunidas/logofu.png" alt="img-porfolio">
 			  <a data-ui-sref="work({work: 'fu'})" class="element-info">
 			  	<p>Familias Unidas</p>
 			  </a>
