--- a/public/res/css/styles.css
+++ b/public/res/css/styles.css
@@ -1303,6 +1303,18 @@ img.portImg, div.bx-wrapper {
   .social-icon .fa {
     color: #fff; }
 
+.footer-content > div:nth-child(1) {
+  width: 20%; }
+
+.footer-content > div:nth-child(2) {
+  width: 20%; }
+
+.footer-content > div:nth-child(3) {
+  width: 30%; }
+
+.footer-content > div:nth-child(4) {
+  width: 30%; }
+
 .social-icon:nth-child(1):hover {
   background-color: #3B5998; }
 
