--- a/public/partials/common/footer.html
+++ b/public/partials/common/footer.html
@@ -5,7 +5,7 @@
     <div class="footer-container">            
         <div class="footer-content">
             <div class="logo-icon">
-                <img src="res/img/logoRB.png" alt="">
+                <img src="res/img/logo-footer.png" alt="">
             </div>
             <div class="footer-nav">                
                 <a ui-sref="/" ui-sref-active="active" class="active">Inicio</a>
