--- a/public/partials/portfolio.html
+++ b/public/partials/portfolio.html
@@ -24,7 +24,7 @@
 			  </a>
 			</figure>
 			<figure class="modal-project element-item design">
-			  <img src="res/img/portfolio/diseno/logos/gasmarket/gasmarket.png" alt="img-porfolio">
+			  <img src="res/img/portfolio/diseno/logos/gasmarket/gasmarket-logo.jpg" alt="img-porfolio">
 			  <figcaption class="element-info" data-ui-sref="portfolio.modalwork({modalwork: 'gasmarket'})">
 			  	<p>Gasmarket</p>
 			  </figcaption>
