--- a/public/partials/common/footer.html
+++ b/public/partials/common/footer.html
@@ -16,7 +16,7 @@
             <div class="contact-info">
                 <span><i class="fa fa-envelope-o" aria-hidden="true"></i>contacto@bmarkt.studio</span>
                 <span><i class="fa fa-mobile-phone fa-lg" aria-hidden="true"></i>(+505) 8853 9870</span>
-                <span><i class="fa fa-map-marker" aria-hidden="true"></i><p>Supermercado la colonia 5 1/2 cuadras norte</p></span>
+                <span><i class="fa fa-map-marker acomodate" aria-hidden="true"></i><p>Supermercado la colonia 5 1/2 cuadras norte</p></span>
                 <span><i class="fa fa-globe" aria-hidden="true"></i> Estelí - Nicaragua</span>
                 <div class="map-btn map-toggler_open">VER MAPA</div>
             </div>
