--- a/src/scss/layouts/_modal-project.scss
+++ b/src/scss/layouts/_modal-project.scss
@@ -15,8 +15,8 @@
     height: 100%;
 }
 .moda-contento {
-	width: 60%;
-	height: 80%;
+	width: 850px;
+	height: 650px;
 	overflow: hidden;
 	@extend %flex; 
 	//margin: 0 auto;
