--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -25,7 +25,7 @@
     <div class="wedo-wrapper">
         <div class="service-description">
             <div class="service-description-container">
-                <a href="" ui-sref="service({service: 'design'})"><h3>Diseño Gráfico</h3></a>
+                <a href="" ui-sref="servicio({service: 'design'})"><h3>Diseño Gráfico</h3></a>
                 <p class="paragraph">
                     En B-markt, sabemos que comunicar la personalidad de una marca gráficamente es una tarea que debe ser gestionada cuidadosamente. Conocer y explotar el potencial del mensaje que se desea comunicar, es la tarea del equipo especialista que desarrolla tus conceptos en: identidad corporativa (logotipo y marca), papelería, cartelería, expresiones editoriales, diseño publicitario y web. <a href="" ui-sref="service({service: 'design'})"><i>ver más...</i></a>
                 </p>
@@ -34,7 +34,7 @@
         <figure class="wedo-fig ribon-left">
             <img class="lazy wedo-fig_img" data-original="res/img/services-home/diseno2.png" alt="Design">
             <figcaption class="wedo-fig_cap">
-                <a href="" ui-sref="service({service: 'design'})"></a>
+                <a href="" ui-sref="servicio({service: 'design'})"></a>
             </figcaption>
         </figure>
     </div>
@@ -42,12 +42,12 @@
         <figure class="wedo-fig ribon-right">
             <img class="lazy wedo-fig_img" data-original="res/img/services-home/desarrollo.png" alt="Development">
             <figcaption class="wedo-fig_cap">
-                <a href="" ui-sref="service({service: 'development'})"></a>
+                <a href="" ui-sref="servicio({service: 'development'})"></a>
             </figcaption>
         </figure>
         <div class="service-description">
             <div class="service-description-container">
-                <a href="" ui-sref="service({service: 'development'})"><h3>Desarrollo Web</h3></a>
+                <a href="" ui-sref="servicio({service: 'development'})"><h3>Desarrollo Web</h3></a>
                 <p class="paragraph">
                     La tecnología está a tu alcance y hacerla a un lado no es una opción. Porque el crecimiento de tu negocio se basa en la rapidez de gestión, creemos que la optimización y automatización de procesos mediante nuestros softwares son la solución práctica para potenciarte en el mercado. Estas soluciones son: sistemas de inventario, de contabilidad, páginas web, aplicaciones móviles, y plataformas de comercio electrónico. <a href="" ui-sref="service({service: 'development'})"><i>ver más...</i></a>
                 </p>
