--- a/public/partials/portfolio.html
+++ b/public/partials/portfolio.html
@@ -19,19 +19,19 @@
 			</figure>-->
 			<figure class="element-item branding">
 			  <img src="res/img/portfolio/diseno/logos/familiasunidas/logofu.png" alt="img-porfolio">
-			  <a data-ui-sref="work({work: 'fu'})" class="element-info">
+			  <a data-ui-sref="trabajo({work: 'fu'})" class="element-info">
 			  	<p>Familias Unidas</p>
 			  </a>
 			</figure>
 			<figure class="modal-project element-item design">
 			  <img src="res/img/portfolio/diseno/logos/gasmarket/gasmarket-logo.jpg" alt="img-porfolio">
-			  <figcaption class="element-info" data-ui-sref="portfolio.modalwork({modalwork: 'gasmarket'})">
+			  <figcaption class="element-info" data-ui-sref="portafolio.modalwork({modalwork: 'gasmarket'})">
 			  	<p>Gasmarket</p>
 			  </figcaption>
 			</figure>
 			<figure class="modal-project element-item design">
 			  <img src="res/img/portfolio/diseno/logos/biketown/biketown.jpg" alt="img-porfolio">
-			  <figcaption class="element-info" data-ui-sref="portfolio.modalwork({modalwork: 'biketown'})">
+			  <figcaption class="element-info" data-ui-sref="portafolio.modalwork({modalwork: 'biketown'})">
 			  	<p>Biketown</p>
 			  </figcaption>
 			</figure>
