componiendo el portafolio

--- a/public/partials/portfolio.html
+++ b/public/partials/portfolio.html
@@ -25,7 +25,7 @@
 			</figure>
 			<figure class="modal-project element-item design">
 			  <img src="res/img/portfolio/diseno/logos/gasmarket/gasmarket-logo.jpg" alt="img-porfolio">
-			  <figcaption class="element-info" data-ui-sref="portafolio.modalwork({modalwork: 'gasmarket'})">
+			  <figcaption href="" class="element-info" data-ui-sref="portafolio.modalwork({modalwork: 'gasmarket'})">
 			  	<p>Gasmarket</p>
 			  </figcaption>
 			</figure>
