--- a/public/partials/portfolio.html
+++ b/public/partials/portfolio.html
@@ -35,6 +35,36 @@
 			  	<p>Biketown</p>
 			  </figcaption>
 			</figure>
+			<figure class="modal-project element-item design">
+			  <img src="res/img/portfolio/diseno/logos/maracuya/maracuya-logo.jpg" alt="img-porfolio">
+			  <figcaption class="element-info" data-ui-sref="portafolio.modalwork({modalwork: 'maracuya'})">
+			  	<p>Maracuyá</p>
+			  </figcaption>
+			</figure>
+			<figure class="modal-project element-item design">
+			  <img src="res/img/portfolio/diseno/logos/bringconsulting/bring-consulting-logo.jpg" alt="img-porfolio">
+			  <figcaption class="element-info" data-ui-sref="portafolio.modalwork({modalwork: 'bringconsulting'})">
+			  	<p>Bring Consulting</p>
+			  </figcaption>
+			</figure>
+			<figure class="modal-project element-item design">
+			  <img src="res/img/portfolio/diseno/logos/realstate/realstate.jpg" alt="img-porfolio">
+			  <figcaption class="element-info" data-ui-sref="portafolio.modalwork({modalwork: 'realstate'})">
+			  	<p>Real State</p>
+			  </figcaption>
+			</figure>
+			<figure class="modal-project element-item design">
+			  <img src="res/img/portfolio/diseno/logos/unan/unan.jpg" alt="img-porfolio">
+			  <figcaption class="element-info" data-ui-sref="portafolio.modalwork({modalwork: 'unan'})">
+			  	<p>UNAN</p>
+			  </figcaption>
+			</figure>
+			<figure class="modal-project element-item design">
+			  <img src="res/img/portfolio/diseno/logos/youralsguide/your-als-guide-logo.jpg" alt="img-porfolio">
+			  <figcaption class="element-info" data-ui-sref="portafolio.modalwork({modalwork: 'your-als-guide'})">
+			  	<p>Your ALS Guide</p>
+			  </figcaption>
+			</figure>
 	    </div>
     </div>
 </div>
